0x00-hello_world/101-quote.c:

te.c:12:2: error: expected declaration or statement at end of input
   12 |  return (1);
      |  ^~~~~~
